--- a/H1EmuLauncher/Language/StringResources.es-ES.xaml
+++ b/H1EmuLauncher/Language/StringResources.es-ES.xaml
@@ -168,7 +168,7 @@
     <system:String x:Key="item188">REPARCHADO...</system:String>
     <system:String x:Key="item189">MATAR</system:String>
     <system:String x:Key="item190">Versión del juego detectada: 23 de febrero de 2017 (King of the Kill).</system:String>
-    <system:String x:Key="item191">Su H1EmuLauncher se ha minimizado en la bandeja del sistema.</system:String>
+    <system:String x:Key="item191">Su H1Emu Launcher se ha minimizado en la bandeja del sistema.</system:String>
     <system:String x:Key="item192">Borrar</system:String>
     <system:String x:Key="item193">Copiar</system:String>
     <system:String x:Key="item194">Salida</system:String>
@@ -199,4 +199,5 @@
     <system:String x:Key="item219">Enabling developer mode means that the game will not be automatically patched and multiple instances of the game can be launched.</system:String>
     <system:String x:Key="item220">There was an error pasting your text:</system:String>
     <system:String x:Key="item221">Paste</system:String>
+    <system:String x:Key="item222">Would you like to return to the login page?</system:String>
 </ResourceDictionary>
