--- a/H1EmuLauncher/Language/StringResources.fr-FR.xaml
+++ b/H1EmuLauncher/Language/StringResources.fr-FR.xaml
@@ -168,7 +168,7 @@
     <system:String x:Key="item188">REMISE À JOUR...</system:String>
     <system:String x:Key="item189">TUER</system:String>
     <system:String x:Key="item190">Version du jeu détectée: 23 février 2017 (King of the Kill).</system:String>
-    <system:String x:Key="item191">Votre H1EmuLauncher a été réduit dans la barre d’état système.</system:String>
+    <system:String x:Key="item191">Votre H1Emu Launcher a été réduit dans la barre d’état système.</system:String>
     <system:String x:Key="item192">Supprimer</system:String>
     <system:String x:Key="item193">Copie</system:String>
     <system:String x:Key="item194">Sortie</system:String>
@@ -199,4 +199,5 @@
     <system:String x:Key="item219">Enabling developer mode means that the game will not be automatically patched and multiple instances of the game can be launched.</system:String>
     <system:String x:Key="item220">There was an error pasting your text:</system:String>
     <system:String x:Key="item221">Paste</system:String>
+    <system:String x:Key="item222">Would you like to return to the login page?</system:String>
 </ResourceDictionary>
