--- a/H1EmuLauncher/Language/StringResources.hr-HR.xaml
+++ b/H1EmuLauncher/Language/StringResources.hr-HR.xaml
@@ -168,7 +168,7 @@
     <system:String x:Key="item188">RE-ZAKRPATI...</system:String>
     <system:String x:Key="item189">UBITI</system:String>
     <system:String x:Key="item190">Otkrivena verzija igre: 23. veljače 2017. (King of the Kill).</system:String>
-    <system:String x:Key="item191">Vaš H1EmuLauncher minimiziran je na programsku traku.</system:String>
+    <system:String x:Key="item191">Vaš H1Emu Launcher minimiziran je na programsku traku.</system:String>
     <system:String x:Key="item192">Izbrisati</system:String>
     <system:String x:Key="item193">Kopirati</system:String>
     <system:String x:Key="item194">Izlaz</system:String>
@@ -199,4 +199,5 @@
     <system:String x:Key="item219">Enabling developer mode means that the game will not be automatically patched and multiple instances of the game can be launched.</system:String>
     <system:String x:Key="item220">There was an error pasting your text:</system:String>
     <system:String x:Key="item221">Paste</system:String>
+    <system:String x:Key="item222">Would you like to return to the login page?</system:String>
 </ResourceDictionary>
