--- a/H1EmuLauncher/Language/StringResources.nl-NL.xaml
+++ b/H1EmuLauncher/Language/StringResources.nl-NL.xaml
@@ -168,7 +168,7 @@
     <system:String x:Key="item188">OPNIEUW PATCHEN...</system:String>
     <system:String x:Key="item189">DODEN</system:String>
     <system:String x:Key="item190">Spelversie gedetecteerd: 23 februari 2017 (King of the Kill).</system:String>
-    <system:String x:Key="item191">Uw H1EmuLauncher is geminimaliseerd naar het systeemvak.</system:String>
+    <system:String x:Key="item191">Uw H1Emu Launcher is geminimaliseerd naar het systeemvak.</system:String>
     <system:String x:Key="item192">Verwijderen</system:String>
     <system:String x:Key="item193">Kopiëren</system:String>
     <system:String x:Key="item194">Uitgang</system:String>
@@ -199,4 +199,5 @@
     <system:String x:Key="item219">Enabling developer mode means that the game will not be automatically patched and multiple instances of the game can be launched.</system:String>
     <system:String x:Key="item220">There was an error pasting your text:</system:String>
     <system:String x:Key="item221">Paste</system:String>
+    <system:String x:Key="item222">Would you like to return to the login page?</system:String>
 </ResourceDictionary>
