--- a/H1EmuLauncher/Language/StringResources.pl-PL.xaml
+++ b/H1EmuLauncher/Language/StringResources.pl-PL.xaml
@@ -168,7 +168,7 @@
     <system:String x:Key="item188">PONOWNE ŁATOWANIE...</system:String>
     <system:String x:Key="item189">ZABIĆ</system:String>
     <system:String x:Key="item190">Wykryto wersję gry: 23 lutego 2017 (King of the Kill).</system:String>
-    <system:String x:Key="item191">Twój H1EmuLauncher został zminimalizowany do zasobnika systemowego.</system:String>
+    <system:String x:Key="item191">Twój H1Emu Launcher został zminimalizowany do zasobnika systemowego.</system:String>
     <system:String x:Key="item192">Usuwać</system:String>
     <system:String x:Key="item193">Kopiuj</system:String>
     <system:String x:Key="item194">Wyjście</system:String>
@@ -199,4 +199,5 @@
     <system:String x:Key="item219">Enabling developer mode means that the game will not be automatically patched and multiple instances of the game can be launched.</system:String>
     <system:String x:Key="item220">There was an error pasting your text:</system:String>
     <system:String x:Key="item221">Paste</system:String>
+    <system:String x:Key="item222">Would you like to return to the login page?</system:String>
 </ResourceDictionary>
