--- a/H1EmuLauncher/Language/StringResources.pt-PT.xaml
+++ b/H1EmuLauncher/Language/StringResources.pt-PT.xaml
@@ -168,7 +168,7 @@
     <system:String x:Key="item188">RE-PATCHING...</system:String>
     <system:String x:Key="item189">MATAR</system:String>
     <system:String x:Key="item190">Versão do jogo detectada: 23 de fevereiro de 2017 (King of the Kill).</system:String>
-    <system:String x:Key="item191">Seu H1EmuLauncher foi minimizado na bandeja do sistema.</system:String>
+    <system:String x:Key="item191">Seu H1Emu Launcher foi minimizado na bandeja do sistema.</system:String>
     <system:String x:Key="item192">Excluir</system:String>
     <system:String x:Key="item193">Cópia de</system:String>
     <system:String x:Key="item194">Saída</system:String>
@@ -199,4 +199,5 @@
     <system:String x:Key="item219">Enabling developer mode means that the game will not be automatically patched and multiple instances of the game can be launched.</system:String>
     <system:String x:Key="item220">There was an error pasting your text:</system:String>
     <system:String x:Key="item221">Paste</system:String>
+    <system:String x:Key="item222">Would you like to return to the login page?</system:String>
 </ResourceDictionary>
