--- a/H1EmuLauncher/Language/StringResources.tr-TR.xaml
+++ b/H1EmuLauncher/Language/StringResources.tr-TR.xaml
@@ -168,7 +168,7 @@
     <system:String x:Key="item188">YENİDEN YAMALAMA...</system:String>
     <system:String x:Key="item189">ÖLDÜRMEK</system:String>
     <system:String x:Key="item190">Oyun versiyonu tespit edildi: 23 Şubat 2017 (King of the Kill).</system:String>
-    <system:String x:Key="item191">H1EmuLauncher'ınız sistem tepsisine küçültüldü.</system:String>
+    <system:String x:Key="item191">H1Emu Launcher'ınız sistem tepsisine küçültüldü.</system:String>
     <system:String x:Key="item192">Silmek</system:String>
     <system:String x:Key="item193">Kopyala</system:String>
     <system:String x:Key="item194">Çıkış</system:String>
@@ -199,4 +199,5 @@
     <system:String x:Key="item219">Enabling developer mode means that the game will not be automatically patched and multiple instances of the game can be launched.</system:String>
     <system:String x:Key="item220">There was an error pasting your text:</system:String>
     <system:String x:Key="item221">Paste</system:String>
+    <system:String x:Key="item222">Would you like to return to the login page?</system:String>
 </ResourceDictionary>
