--- a/H1EmuLauncher/Language/StringResources.zh-cn.xaml
+++ b/H1EmuLauncher/Language/StringResources.zh-cn.xaml
@@ -168,7 +168,7 @@
     <system:String x:Key="item188">重新修补...</system:String>
     <system:String x:Key="item189">杀</system:String>
     <system:String x:Key="item190">检测到的游戏版本：2017 年 2 月 23 日（King of the Kill）。</system:String>
-    <system:String x:Key="item191">您的H1EmuLauncher已最小化到系统托盘。</system:String>
+    <system:String x:Key="item191">您的H1Emu Launcher已最小化到系统托盘。</system:String>
     <system:String x:Key="item192">删除</system:String>
     <system:String x:Key="item193">复制</system:String>
     <system:String x:Key="item194">退出</system:String>
@@ -199,4 +199,5 @@
     <system:String x:Key="item219">Enabling developer mode means that the game will not be automatically patched and multiple instances of the game can be launched.</system:String>
     <system:String x:Key="item220">There was an error pasting your text:</system:String>
     <system:String x:Key="item221">Paste</system:String>
+    <system:String x:Key="item222">Would you like to return to the login page?</system:String>
 </ResourceDictionary>
