--- a/H1EmuLauncher/SettingsPages/AccountKey.xaml
+++ b/H1EmuLauncher/SettingsPages/AccountKey.xaml
@@ -161,8 +161,8 @@
                            Style="{DynamicResource TextBlockStyle}"/>
 
                 <!-- Password visibility show button -->
-                <Button x:Name="showKeyButton"
-                        Click="ShowKey"
+                <Button x:Name="toggleKeyVisibilityButton"
+                        Click="ToggleKeyVisibility"
                         Width="20"
                         Height="20"
                         Margin="0,0,32,0"
@@ -173,25 +173,6 @@
 
                     <Button.Content>
                         <Path Data="{DynamicResource EyeIcon}"
-                              Stretch="Uniform"
-                              Fill="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}"/>
-                    </Button.Content>
-                </Button>
-
-                <!-- Password visibility hide button -->
-                <Button x:Name="hideKeyButton"
-                        Click="HideKey"
-                        Width="20"
-                        Height="20"
-                        Margin="0,0,32,0"
-                        VerticalAlignment="Center"
-                        HorizontalAlignment="Right"
-                        Visibility="Hidden"
-                        RenderOptions.BitmapScalingMode="Fant"
-                        Style="{StaticResource PathButton}">
-
-                    <Button.Content>
-                        <Path Data="{DynamicResource EyeHideIcon}"
                               Stretch="Uniform"
                               Fill="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}"/>
                     </Button.Content>
