--- a/H1EmuLauncher/SteamFramePages/DownloadStatus.xaml
+++ b/H1EmuLauncher/SteamFramePages/DownloadStatus.xaml
@@ -9,8 +9,7 @@
       d:DesignHeight="140"
       FontFamily="Bahnschrift Light"
       FontSize="16"
-      Foreground="FloralWhite"
-      Loaded="StatusLoaded">
+      Foreground="FloralWhite">
 
     <UserControl.Resources>
         <ResourceDictionary>
